--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-date-picker": "^5.0.8",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^13.0.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
@@ -57,7 +58,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-image-picker": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
