--- a/package.json
+++ b/package.json
@@ -29,42 +29,56 @@
     "expo-blur": "~14.0.2",
     "expo-camera": "~16.0.11",
     "expo-constants": "~17.0.4",
+    "expo-document-picker": "~13.0.2",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
     "expo-location": "~18.0.5",
+    "expo-media-library": "~17.0.5",
+    "expo-permissions": "^14.4.0",
+    "expo-print": "~14.0.3",
     "expo-router": "~4.0.16",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "html2pdf.js": "^0.10.2",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.6",
     "react-native-date-picker": "^5.0.8",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.2.3",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image-picker": "~16.0.4"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/jquery": "^3.5.32",
     "@types/react": "~18.3.12",
+    "@types/react-native-html-to-pdf": "^0.8.3",
+    "@types/react-native-pdf-lib": "^0.2.3",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
