--- a/package.json
+++ b/package.json
@@ -8,11 +8,23 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "jest --watch --coverage=true",
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "setupFiles": [
+      "./jestSetup.ts"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+    "**/*.{ts,tsx,js,jsx}",
+    "!**/coverage/**",
+    "!**/node_modules/**",
+    "!**/babel.config.js",
+    "!**/expo-env.d.ts",
+    "!**/.expo/**"
+  ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -25,6 +37,7 @@
     "@react-navigation/native": "^7.0.14",
     "@rnmapbox/maps": "^10.1.33",
     "axios": "^1.7.9",
+    "axios-mock-adapter": "^2.1.0",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
     "expo-camera": "~16.0.11",
@@ -74,7 +87,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
+    "@testing-library/react-native": "^13.0.1",
+    "@types/axios-mock-adapter": "^1.9.0",
+    "@types/jest": "^29.5.14",
     "@types/jquery": "^3.5.32",
     "@types/react": "~18.3.12",
     "@types/react-native-html-to-pdf": "^0.8.3",
@@ -82,7 +97,9 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
+    "jest-mock-axios": "^4.8.0",
     "react-test-renderer": "18.3.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
   },
   "private": true
